--- a/system/network/etc/netplan/50-cloud-init.yaml
+++ b/system/network/etc/netplan/50-cloud-init.yaml
@@ -20,3 +20,6 @@ network:
             addresses: [___WLAN0_IP___]
             nameservers:
                 addresses: [___DNS_1___,___DNS_2___]
+            routes:
+                - to: default
+                  via: ___GATEWAY_IP___    
