--- a/unifi-network-application/compose.yml
+++ b/unifi-network-application/compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - /data/unifi-network-application:/config
     ports:
-      #- 8443:8443
+      - 8443:8443
       - 3478:3478/udp
       - 10001:10001/udp
       # Port 8080 is used for adopting, for now this does not yet work via Traefik
@@ -41,7 +41,7 @@ services:
       - traefik.http.services.unifi.loadbalancer.server.port=8443
       - traefik.http.services.unifi.loadbalancer.server.scheme=https
     networks:
-      - local
+      - unifi
       - public
 
   mongo-db:
@@ -52,12 +52,10 @@ services:
       - /data/mongo-db/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     restart: unless-stopped
     networks:
-      - local
+      - unifi
 
 networks:
-  local:
-     name: unifi
-
+  unifi:
   public:
     external: true
     name: "webproxy"
