--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -26,12 +26,12 @@ services:
     depends_on:
       - redis
       - database
-    restart: unless-stopped
+    restart: always
     labels:
       - "traefik.backend=___APP_NAME___"
       - "traefik.docker.network=webproxy"
-      - "traefik.http.routers.___APP_NAME___.rule=Host(`___APP_NAME___.local`)"
-      - "traefik.frontend.rule=Host:___APP_NAME___.local"
+      - "traefik.http.routers.___APP_NAME___.rule=Host(`___APP_NAME___.home`)"
+      - "traefik.frontend.rule=Host:___APP_NAME___.home"
       - "traefik.http.routers.___APP_NAME___.entrypoints=web"
       - "traefik.enable=true"
       - "traefik.port=3001"
@@ -40,7 +40,6 @@ services:
     networks:
        - public
        - local
-
 
   immich-machine-learning:
     container_name: immich_machine_learning
@@ -60,7 +59,7 @@ services:
 
   redis:
     container_name: immich_redis
-    image: docker.io/redis:6.2-alpine@sha256:d6c2911ac51b289db208767581a5d154544f2b2fe4914ea5056443f62dc6e900
+    image: docker.io/redis:6.2-alpine@sha256:328fe6a5822256d065debb36617a8169dbfbd77b797c525288e465f56c1d392b
     healthcheck:
       test: redis-cli ping || exit 1
     restart: always
@@ -78,7 +77,7 @@ services:
     volumes:
       - ${DB_DATA_LOCATION}:/var/lib/postgresql/data
     healthcheck:
-      test: pg_isready --dbname='${DB_DATABASE_NAME}' || exit 1; Chksum="$$(psql --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')"; echo "checksum failure count is $$Chksum"; [ "$$Chksum" = '0' ] || exit 1
+      test: pg_isready --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' || exit 1; Chksum="$$(psql --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')"; echo "checksum failure count is $$Chksum"; [ "$$Chksum" = '0' ] || exit 1
       interval: 5m
       start_interval: 30s
       start_period: 5m
@@ -92,7 +91,7 @@ volumes:
 
 networks:
   local:
-     name: home-assistant
+     name: immich
 
   public:
     external: true
