--- a/system/docker.yml
+++ b/system/docker.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Docker
-  hosts: pi5
+  hosts: pi5,pihole
   become: true
   tasks:
     - name: Add Docker GPG apt Key
@@ -20,13 +20,21 @@
         update_cache: true
         cache_valid_time: 86400 # One day
 
+    - name: Install required system packages
+      ansible.builtin.apt:
+        pkg:
+          - python3-docker
+        state: present
+        update_cache: true
+        cache_valid_time: 86400 # One day
+
     - name: Create "docker" group
       ansible.builtin.group:
         name: "docker"
         state: present
 
-    - name: Add system_user user to "docker" group
+    - name: Add ansible_user user to "docker" group
       ansible.builtin.user:
-        name: "{{ system_user }}"
+        name: "{{ ansible_user }}"
         groups: "docker"
         append: true
