Fix unifi (And move mongo back to the unifi dir) Use more consistent naming for containers

--- a/minecraft-server/compose.yml
+++ b/minecraft-server/compose.yml
@@ -1,5 +1,6 @@
 services:
   minecraft-server:
+    container_name: "minecraft-server"
     image: itzg/minecraft-bedrock-server
     tty: true
     stdin_open: true
